<resources>
    <string name="app_name">FragmentNavigation</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_games">Games</string>

    <string name="title_fav">Fav</string>

    <string name="title_bet_slip">Bet Slip</string>

    <string name="title_my_bets">My Bets</string>
    <string name="title_bet">Bet</string>

    <string name="title_account">Account</string>

    <string name="log_string">%1$s %2$s%3$s</string>
    <string name="down">Down</string>
    <string name="title_new_message">New message</string>
    <string name="title_message">Message</string>
    <string name="title_messages">Messages</string>
    <string name="title_live">Live</string>
    <string name="title_live_games">Live games</string>
    <string name="title_game">Game</string>
    <string name="title_prematch">Prematch</string>
    <string name="title_search">Search</string>
    <string name="title_prematch_location">Prematch location</string>
    <string name="title_prematch_location_leagues">Prematch location leagues</string>
    <string name="title_prematch_location_league_games">Prematch location league games</string>
</resources>
