<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/games"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_games" />

    <item
        android:id="@id/favorite"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_fav" />

    <item
        android:id="@id/betslip"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_bet_slip" />

    <item
        android:id="@id/my_bets"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:title="@string/title_my_bets" />

    <item
        android:id="@id/accounts"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/title_account" />

</menu>
